--- a/modules/home/xmonad/my-xmonad.cabal
+++ b/modules/home/xmonad/my-xmonad.cabal
@@ -1,43 +1,44 @@
-cabal-version:      3.0
-name:               my-xmonad
-version:            0.1.0.0
-category:           System
-maintainer:         Brian Kuhns
-synopsis:           My xmonad config
-description:        My xmonad config built with cabal for convenience
-license:            BSD-3-Clause
+cabal-version: 3.0
+name:          my-xmonad
+version:       0.1.0.0
+category:      System
+maintainer:    Brian Kuhns
+synopsis:      My xmonad config
+description:   My xmonad config built with cabal for convenience
+license:       BSD-3-Clause
 
 executable my-xmonad
   main-is:          Main.hs
   build-depends:
-    , my-xmonad
-    , extra
     , base
-    , xmonad
-    , xmonad-contrib
-    --, xmobar
     , containers
+    , extra
+    , my-xmonad
     , text
     , time
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+    , xmonad
+    , xmonad-contrib
+
+  --, xmobar
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
   default-language: Haskell2010
 
 library
-  hs-source-dirs:
-    , lib
-    , .
+  hs-source-dirs:   lib .
   exposed-modules:
     Config
     Modes
     NamedScratchpad
+
   build-depends:
-    , extra
     , base
-    , xmonad
-    , xmonad-contrib
-    --, xmobar
     , containers
+    , extra
     , text
     , time
-  ghc-options: -threaded
+    , xmonad
+    , xmonad-contrib
+
+  --, xmobar
+  ghc-options:      -threaded
   default-language: Haskell2010
