--- a/modules/home/xmonad/my-xmonad.cabal
+++ b/modules/home/xmonad/my-xmonad.cabal
@@ -7,40 +7,31 @@ synopsis:      My xmonad config
 description:   My xmonad config built with cabal for convenience
 license:       BSD-3-Clause
 
-executable my-xmonad
-  main-is:          Main.hs
-
-  --TODO use a common block
+common common-deps
   build-depends:
     , base
     , containers
     , extra
-    , my-xmonad
     , text
     , time
     , xmonad
     , xmonad-contrib
 
   --, xmobar
-  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
   default-language: Haskell2010
 
+executable my-xmonad
+  import:        common-deps
+  main-is:       Main.hs
+  build-depends: my-xmonad
+  ghc-options:   -threaded -rtsopts -with-rtsopts=-N
+
 library
-  hs-source-dirs:   lib .
+  import:          common-deps
+  hs-source-dirs:  lib .
   exposed-modules:
     Config
     Modes
     NamedScratchpad
 
-  build-depends:
-    , base
-    , containers
-    , extra
-    , text
-    , time
-    , xmonad
-    , xmonad-contrib
-
-  --, xmobar
-  ghc-options:      -threaded
-  default-language: Haskell2010
+  ghc-options:     -threaded
