--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
           experimental-features = nix-command flakes
 
     - name: Check flake
-      run: nix flake check --all-systems
+      run: nix flake check
 
     - name: Build configurations
       run: |
